# eslint-plugin-sqlite

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  THIRD-PARTY-LICENSES.html  eslint.config.js  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml  licenses.yml  release.yml
parser/: Cargo.toml  Dockerfile  about.hbs  rust-toolchain.toml
parser/src/: lib.rs  nullable.rs  parameters.rs  prefix.rs  query.rs
src/: index.ts  inferQueryInput.ts  inferQueryResult.ts  ruleOptions.ts  utils.ts
src/rules/: parameter-prefix.ts  typed-input.ts  typed-result.ts  valid-query.ts
tests/: inferQueryInput.test.ts  inferQueryResult.test.ts
tests/rules/: parameter-prefix.test.ts  rule-tester.ts  typed-input.test.ts  typed-result.test.ts  valid-query.test.ts
