[package]
name = "parser"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fallible-iterator = "0.3.0"
indexmap = "2.4.0"
sqlite3-parser = "0.13.0"
wasm-bindgen = "0.2.93"
sqlx-sqlite = { git = "https://github.com/merceyz/sqlx.git", rev = "d4c0dbdd09b107f942bb464e2adc0439153a21e2" }
